Keymap editing is broken #42137

Closed
opened 2014-10-07 19:51:41 +02:00 by emilian huminiuc · 6 comments

System Information
Linux 3.17.0, nvidia 8800gt, nvidia-drivers 340.46

Blender Version
Broken: 2.72+, hash: 26083d5
Worked: 2.72+, hash: b4860de

Short description of error
When customizing the keymap, changing an existing entry causes it to disappear (also makes it unfunctional)

Exact steps for others to reproduce the error
go to File -> User Preferences -> Input and try to customize an entry (for example 3d View -> Move View, try unchecking the Shift modifier so that panning is done on Mouse Middle button), as soon as you click on the Shift checkbox the entry disappears completely.
This also affects loading a previously customized user preferences, custom entries becoming completely disabled.

I suspect 0d8a007c to be the cause, as reverting back to b4860de works as expected.

TIA

**System Information** Linux 3.17.0, nvidia 8800gt, nvidia-drivers 340.46 **Blender Version** Broken: 2.72+, hash: 26083d5 Worked: 2.72+, hash: b4860de **Short description of error** When customizing the keymap, changing an existing entry causes it to disappear (also makes it unfunctional) **Exact steps for others to reproduce the error** go to File -> User Preferences -> Input and try to customize an entry (for example 3d View -> Move View, try unchecking the Shift modifier so that panning is done on Mouse Middle button), as soon as you click on the Shift checkbox the entry disappears completely. This also affects loading a previously customized user preferences, custom entries becoming completely disabled. I suspect 0d8a007c to be the cause, as reverting back to b4860de works as expected. TIA

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @emilian

Added subscriber: @emilian
Bastien Montagne self-assigned this 2014-10-07 23:04:42 +02:00

This issue was referenced by e36cc29a69

This issue was referenced by e36cc29a69c57c9818fcb5018dead575ba7e4263

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e36cc29a69.

Closed by commit e36cc29a69.

This issue was referenced by 204dff6e2e

This issue was referenced by 204dff6e2e1b701dcf94d652b55943a751da1f09
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42137
No description provided.